--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
   firebase_messaging: ^15.1.6
+  shared_preferences: ^2.5.1
 
 
 dev_dependencies:
