--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -16,6 +16,8 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        // Enable desugaring for core libraries
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -31,6 +33,7 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        minSdkVersion 23
     }
 
     buildTypes {
@@ -39,6 +42,11 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
+    }
+
+    dependencies {
+        // Add core library desugaring dependency
+        coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5' // Ensure this is in your dependencies block
     }
 }
 
