--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   permission_handler: ^11.3.1
   firebase_messaging: ^15.1.6
   shared_preferences: ^2.5.1
+  crypto: ^3.0.1
 
 
 dev_dependencies:
@@ -50,6 +51,11 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^4.0.0 
   flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/Tatak_icon.png"
 
 flutter_launcher_icons:
   android: "launcher_icon"
